css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---
@charset "utf-8";

// Our variables
$base-font-family: "Open Sans", sans-serif, Helvetica, Arial;
$base-font-size:   16px;
$base-font-weight: 300;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #56847e;
$background-color: #183232;
$brand-color:      #fff;
$visited-color:      #fff;
$button-color:      #0f3a49;
$alert-text:      #003838;
$alert-background:      #4a9292;
$button-hover:      #56847e;
$header-color:     transparent;
$white:            #fff;
$videoBackground: linear-gradient(#123845,#3d4d59,#9e7276, #c88180);

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

// Width of the content area
$content-width:    800px;

$on-palm:          768px;
$on-laptop:        800px;

// Minima also includes a mixin for defining media queries.
// Use media queries like this:
// @include media-query($on-palm) {
//     .wrapper {
//         padding-right: $spacing-unit / 2;
//         padding-left: $spacing-unit / 2;
//     }
// }

// Import partials from the `minima` theme.
@import "minima";
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400, 600');
@font-face {
    font-family: "Bebas";
    src:    url('/assets/BebasNeue.otf') format('truetype');
}

.home{
    display: flex;
    flex-direction: column;
    position: relative;

    .description img, .description p{
        font-weight: bold;
        text-align: center;
        text-transform: uppercase;
        display: block;
        max-width: 256px;
        width: 100%;
        margin: auto;
        margin-bottom: 10px;
    }

    .description.small{
        padding: 10px;
        margin: 10px auto;
        width: 50vw;
        display: flex;
        align-items: center;
        justify-content: space-between;
        font-weight: 600;

        @include media-query($on-palm) {
            margin: auto 10px;
            margin-top: 0px;
            max-width: 100vw;
            text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
            width: inherit;
        }

    }

    a.bebas{
        text-decoration: underline;
        font-family: "Bebas";
        font-size: 1.5em;
    }

}

section.summary{
    background-color: rgba(0, 0, 0, 0.75);
}


.stores{
    flex-direction: row;
    align-items: stretch;
    flex-grow: 2;
    justify-content: space-around;
    padding: 10px;
}

 a{
     &.store-link{
        width: 240px;
        margin: auto;
        text-align: center;
        img{
            width: 100%;
            box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.25);
            border-radius: 8px;
        }
        @include media-query($on-palm) {
            margin: auto 10px;
        }
    }
 }

.hidden-xs{
    @include media-query($on-palm) {
        display: none;
    }
}

.hidden-lg{
    display: none;
    @include media-query($on-palm) {
        display: flex;
    }
}

.calltoaction{
    transition: color 0.25s, box-shadow 0.25s, margin 0.25s, text-shadow 0.25s;
    background-color: #5a2127;
    display: block;
    padding: 1em 2em 0.9em;
    border-radius: 2px;
    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.25);
    font-family: bebas;
    font-size: 2em;
    color: #fff;
    text-shadow: 0 0 30px rgba(255, 255, 255, 0.5);
    text-align: center;

    &:hover{
        color: #d14;
        text-shadow: 0 0 30px rgba(221, 17, 68, 0.5);
    }

    &:active{
        box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
        margin-top: 3px;
        margin-bottom: -3px;
    }
    @include media-query($on-palm) {
        font-size: 1.5em;
    }

}

.logoContainer{
    height: 50vh;
    min-height: 480px;
    width: 100%;
    overflow: hidden;
    text-align: center;
    display: flex;
    flex-direction: row;
    align-items: center;


    .titleLogo{
        display: block;
        max-width:100%;
        max-height:100%;
        width: auto;
        height: auto;
        margin: auto;
    }

    img{
        max-height: 100%;
    }

    @include media-query($on-palm) {
        height: 256px;
        min-height: 256px;
    }


}

.logo{
    display: block;
    height: 10vh;
    width: 10vh;
    color: $white;
    text-align: center;
    float: left;
    img{
        height: 10vh;
        display: block;
        margin: auto;
        @include media-query($on-palm) {
            height: 60px;
            width: 60px;
        }
    }
    @include media-query($on-palm) {
        height: 60px;
        width: 60px;
    }
}

#iphone{
    position: relative;
    min-width: 260px;
    height: 524px;
    min-height: 524px;
    margin: auto;

    @include media-query($on-palm) {
        height: 420px;
        min-height: 420px;
    }


    .cover{
        pointer-events: none;
        position: absolute;
        background-image: url("/assets/backiphone_transparent.png");
        background-position: center;
        background-repeat: no-repeat;
        background-size: contain;
        width: 255px;
        left: 3px;
        height: 100%;
        @include media-query($on-palm) {
            background-size: contain;
        }
    }

    video{
        position: absolute;
        margin: auto;
        top: 60px;
        left: 11px;
        width: 240px;
        height: 400px;

        @include media-query($on-palm) {
            width: 230px;
            height: 330px;
            left: 15px;
            top: 46px;
        }
    }
}

.description{
    text-align: justify;
    //border-top: 2px dotted;
    font-size: 1em;
    color: $white;
    padding: $spacing-unit;
    max-width: 50vw;
    margin:  $spacing-unit auto;

    @include media-query($on-palm) {
        max-width: 100vw;
        padding: 20px;
    }

    h1, h2{
        font-family: "Bebas";
        font-weight: 400;
        font-size: 2em;

        &.center{
            text-align: center;
        }
    }

    ul{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-around;
        list-style-type: square;
        li{
            margin: 1em;
            @include media-query($on-palm) {
                margin: 1em 0em;
            }
        }
    }


}
.newsletter{
    max-width: 25vw;

    @include media-query($on-palm) {
        max-width: 100vw;
    }

    #mc_embed_signup{
        color: $button-color;
        border-radius: 2px;
        box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.25);

        .button{
            background-color: $button-color;

            &:hover{
                background-color: $button-hover;
            }
        }
        h2{
            margin: 0px 0px 15px;
            @include media-query($on-palm) {
                margin: 0px 0px 15px;
            }
        }

    }
}

.alert{
    h1{
        font-weight: 600;
    }

    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: $alert-background;
    color: $alert-text;
    //text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.5);
    box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.250);
    padding: 1.5em;
    border-radius: 2px;
    font-weight: 400;
    font-size: 1em;
    max-width: 50vw;
    margin: auto;

    @include media-query($on-palm) {
        flex-direction: column;
        max-width: 100vw;
        border-radius: 0px;
    }

    .alert-icon{
        align-self: center;
        height: 128px;
        fill: #825c06;
        filter: drop-shadow(0px 1px 0px rgba(255, 255, 255, 0.5));
        margin-right: 32px;
        @include media-query($on-palm) {
            margin-right: 0px;
            margin-bottom: 32px;
        }
    }
}

.alert-title{
    text-align: center;
    background-color: transparent;
    padding: 1.5em;
    color: $text-color;
}

.footer-col-wrapper{
    color: $header-color;
    font-size: 16px;
    max-width: 400px;
    margin: auto;
}

.description ul.contact-list, .social-media-list{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    li{
        //width:50%;
        display: block;
        text-align: center;
        font-weight: bolder;
        img{
            //border: 4px solid #ffffff;
            border-radius: 3px;
            //max-width: 90%;
            box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.25);
        }
    }
}

.social-media-list, .contact-list{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.contact-list{
    font-family: "Bebas";
    font-size: 1.5em;
    text-decoration: underline;
    font-weight: 400;
    justify-content: space-around;
}

.recall{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    height: 260px;

    >*{
        display: block;
        max-width: 260px;
        margin: auto;
        line-height: 1;
    }
    h1{
        font-size: 3em;
        max-width: 320px;
    }
    img{
        max-height: 160px;
        margin-bottom: 20px;
    }

    a{
        text-decoration: underline;
        font-family: "Bebas";
        font-size: 1.5em;
    }

    p{
        color: $visited-color;
    }

    .partners{
        max-width: inherit;
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-around;

        img{
            width:35%;
            margin-bottom: 0px;
        }
    }
}

